# Ousmane-Deme

./: .gitignore  CLAUDE.md  PROJECT_REGISTRY.md  deploy-home-display.sh  deploy.sh  docker-compose.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS-v1.4.md  REQUIREMENTS-v1.6.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  session-progress.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ROADMAP.md  v1.6-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
documentation/: MANAGEMENT_VM_SETUP.md  NETWORK_STORAGE_SETUP.txt
documentation/home-monitoring-project/: NVR_RECORDING_SETUP.md  PROJECT_SETUP.md  QUICK_START.txt  RECORDING_SUMMARY.txt  passwords
documentation/security-monitor-setup/: QUICKSTART.txt  README.md  UBUNTU-DESKTOP-GUIDE.txt  docker-compose.yml  install-docker.sh  master-setup.sh  proxmox-vm-create.sh  setup-kiosk-desktop.sh  setup-kiosk.sh
jarvis-backend/: .dockerignore  .env.example  Dockerfile  drizzle.config.ts  package-lock.json  package.json
jarvis-backend/src/: config.ts  index.ts
jarvis-display/: display_daemon.py  jarvis-display.service  requirements.txt
jarvis-ear/: pyproject.toml  requirements.txt
jarvis-ear/src/jarvis_ear/: __init__.py  __main__.py  audio.py  backend.py  config.py  display.py  ring_buffer.py  speaker.py  state_machine.py  vad.py  wakeword.py
jarvis-ui/: Dockerfile  index.html  nginx-host.conf  nginx.conf  package-lock.json  package.json  vite.config.ts
(+365 files in other folders)
